--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,6 @@
     <color name="navyBlue">#000080</color>
 
     <!-- Box Stroke Default Color -->
-    <color name="mtrl_textinput_default_box_stroke_color">#A8A3AA</color>
+    <color name="mtrl_textinput_default_box_stroke_color">@color/lightGray</color>
+
 </resources>
