--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,12 +5,15 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
 
         <!-- Define uma fonte padrão para todo o aplicativo -->
-        <item name="fontFamily">@font/roboto</item>
+        <item name="fontFamily">@font/comic_neue_bold</item>
 
         <!-- Cores do sistema -->
         <item name="clrMainScreen">@color/white_system</item>
         <item name="clrText">@color/darkGray</item>
         <item name="clrHint">@color/lightGray</item>
+
+        <!-- Cores scrollView dados websocket -->
+        <item name="clrScrViw_Background">@color/WHITE</item>
         <item name="clrScrViw_Border">@color/blue_system</item>
 
         <!-- Cores botão padrão -->
@@ -29,7 +32,6 @@
 
         <!-- Cor do painel dos dados wi-fi -->
         <item name="clrPanelConfigWiFi">@color/WHITE</item>
-
     </style>
     <style name="Theme.Base_Websocket" parent="Base.Theme.Base_Websocket" />
 </resources>
